adds comment about image

--- a/html-assignment/css/main.css
+++ b/html-assignment/css/main.css
@@ -13,6 +13,7 @@ header, footer{
 
 #my-image{
     box-shadow: 0px 0px 2px 1px black;
+    /* When using my github link, the image does not appear in the browser, but it does appear with the Live Server. I couldn't figure out why, but hopefully you can see it. */
 }
 
 ul {
