--- a/week6/css/main.css
+++ b/week6/css/main.css
@@ -1,6 +1,8 @@
 body{
  color: darkslategrey; 
  font-family: Arial, Helvetica, sans-serif;
+ /* Adding background image */
+ background-image: url(../images/white_brick_wall.png);
 }
 /* This is a comment. */
 h1{
@@ -26,7 +28,10 @@ nav ul a{
 }
 /* Selecting element with id value */
 #treatofweek{
-    background-color: orange;
+    /* colour image repeat position-x position-y */
+    background: orange url(../images/bread.jpg) no-repeat center center;
+    background-size: cover;
+    color: white
 }
 /* Selecting elements with class value/name */
 .orange-link{
