--- a/week7/css/main.css
+++ b/week7/css/main.css
@@ -4,6 +4,28 @@ body{
  /* Adding background image */
  background-image: url(../images/white_brick_wall.png);
 }
+
+.container{
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+img{
+    width: 100%;
+}
+
+/* Display and Box-sizing */
+
+nav ul li{
+    display: inline-block;
+    width: 49%;
+    padding: 1em;
+    box-sizing: border-box;
+}
+nav ul a{
+    display: block;
+}
+
 /* This is a comment. */
 h1{
     color: peru;
@@ -26,8 +48,17 @@ nav ul a{
     text-decoration: none;
 
 }
+
+.orange-link.large-text{
+    /* can also write as #treatofweek .orange-link */
+    position: absolute;
+    bottom: 0;
+    right: 0;
+}
+
 /* Selecting element with id value */
 #treatofweek{
+    position: relative;
     /* colour image repeat position-x position-y */
     background: orange url(../images/bread.jpg) no-repeat center center;
     background-size: cover;
@@ -37,7 +68,7 @@ nav ul a{
     /* 1.25 x 16 = 20px */
 
     /* 1em = 20px (1 x font size) */
-    padding: 1em;
+    padding: 1em 1em 5em 1em;
 
     /* viewport based units vh and vw */
     /* height: 100vh */
@@ -49,6 +80,31 @@ nav ul a{
     background-color: darkslategrey;
     color: orange;
     text-decoration: none;
+    padding: 1.5em;
+    display: block;
+    width: 300px;
+}
+
+/* Example for FLOAT */
+
+article,
+aside {
+    width: 80%;
+    background-color: rgba(255, 255, 255, 0.6);
+    border: 1px solid black;
+    padding: 1.5em;
+    box-sizing: border-box;
+    float: left;
+}
+
+aside{
+    width: 20%;
+}
+
+/* clear the float for the sections */
+
+section{
+    clear: both;
 }
 
 .large-text{
@@ -124,4 +180,49 @@ remember n = 0,1,2,3, ... so:
 2n+1= 1,3,5,7, ...*/
 table td:nth-child(2n+1){
 background-color: rgba(0,0,0,0.2);
+}
+
+/* CSS Specificity
+Formula: inline-styles id class tag-name */
+
+/* 0001 */
+footer{
+    background-color: aqua;
+}
+
+/* 0001 */  
+footer{
+    background-color: red;
+}
+
+/* 0002 */
+body footer{
+    background-color: orange;
+}
+
+/* 0010 */
+.site-footer{
+    background-color: cornflowerblue;
+}
+
+/* 0011 */
+footer.site-footer{
+    background-color: teal;
+}
+
+/* CSS Box Model */
+article section h3{
+    background-color: cornflowerblue;
+    padding: 1em;
+    width: 50%;
+}
+
+section p{
+    width: 50%;
+    /* top-bottom left-right (padding values) */
+    padding: 1em .5em;
+    /* top, right, bottom, left (margin values). a margin can have a neg value, a padding can't */
+    margin: -2em 2em 2em 2em;
+    /* margin-top: -1em */
+    border-bottom: 2px dashed black;
 }
