--- a/week10/css/main.css
+++ b/week10/css/main.css
@@ -138,6 +138,29 @@ p{
     text-transform: uppercase;
     text-align: center;
 }
+
+/* Navigation */
+.nav-list li{
+    border-bottom: 1px solid grey;
+    text-align: center;
+}
+
+/* LoVe HAte */
+.nav-list a,
+.nav-list a:link,
+.nav-list a:visited{
+    display: block;
+    padding: 1em 0;
+    text-decoration: none;
+}
+
+.nav-list a:hover,
+.nav-list a:focus,
+.nav-list a.current{
+    background-color: #00ADD8;
+    color: inherit;
+}
+
 /* ---mobile app section--- */
 .btn{
     text-decoration: none;
@@ -151,6 +174,19 @@ p{
     color: inherit;
     background-color: #00ADD8;
 }
+
+/* Simple actions section */
+.actions-list{
+    display: flex;
+    flex-flow: row wrap;
+}
+.actions-list li{
+    max-width: 50%;
+    padding: 1em;
+    text-align: center;
+    font-size: 1.5rem;
+}
+
 /* ---footer--- */
 .site-footer{
     border-top: 2px solid #00ADD8;
@@ -182,6 +218,19 @@ p{
     .banner h1{
         color: white;
     }
+    /* Navigation */
+    .nav-list{
+        display: flex;
+    }
+    .nav-list li{
+        flex: 1;
+        border: none;
+        border-right: 1px solid grey;
+    }
+    .nav-list li:last-child{
+        border: none;
+    }
+
     /* app section */
     .app img{
         width: 40%;
@@ -193,4 +242,14 @@ p{
     }
     /* add clearfix to the parent (footer) */
 
+}
+
+/* ------------------------------------------------------
+                    media query 800px and above
+-------------------------------------------------------- */
+
+@media screen and (min-width:800px){
+    .actions-list li{
+        width: 20%;
+    }
 }
