--- a/week12/css/main.css
+++ b/week12/css/main.css
@@ -11,3 +11,10 @@ h1{
     color: orange;
     font-size: 7rem;
 }
+
+iframe{
+    width: 100%;
+    max-width: 800px;
+    margin: 0 auto;
+    display: block;
+}
