--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -3,112 +3,203 @@
    License: none (public domain)
 */
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
 }
+
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+    display: block;
 }
+
 body {
-	line-height: 1;
+    line-height: 1;
 }
-ol, ul {
-	list-style: none;
+
+ol,
+ul {
+    list-style: none;
 }
-blockquote, q {
-	quotes: none;
+
+blockquote,
+q {
+    quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
+    content: '';
+    content: none;
 }
+
 table {
-	border-collapse: collapse;
-	border-spacing: 0;
+    border-collapse: collapse;
+    border-spacing: 0;
 }
 
 /* ----------------------------------------------------------------------
                             custom styles
 ------------------------------------------------------------------------ */
 
-html{
+html {
     font-family: 'Open Sans', sans-serif;
     font-size: 14px;
     box-sizing: border-box;
 }
 
-h1{
+h1 {
     font-size: 3.25em;
     line-height: 5rem;
     font-weight: bold;
 }
-h2{
+
+h2 {
     font-size: 2.5rem;
     font-weight: bold;
 
 }
-h3{
+
+h3 {
     font-size: 1.5rem;
     font-weight: 800;
 }
-h4{
+
+h4 {
     font-size: 0.8rem;
     font-weight: bold;
 }
-h5{
+
+h5 {
     font-size: 1rem;
 }
 
-p{
+p {
     font-size: 0.8rem;
     margin: 1em 0;
     line-height: 1rem;
 }
 
-.container{
+.container {
     max-width: 1200px;
     margin: 0 auto;
 }
 
 /* -------------------Navigation-------------------- */
 
-.nav{
+.nav {
     background-color: #222;
     padding: 1em;
 }
 
-.nav a{
+.nav a {
     text-align: center;
 }
 
-.nav img{
+.nav img {
     display: block;
     width: 15%;
 }
 
 .nav a,
 .nav a:link,
-.nav a:visited{
+.nav a:visited {
     display: block;
     padding: 1em 0;
     text-decoration: none;
@@ -118,42 +209,44 @@ p{
 
 .nav a:hover,
 .nav a:focus,
-.nav a.current{
+.nav a.current {
     background-color: #c78c06;
     color: inherit;
 }
 
-.search{
+.search {
     display: flex;
 }
 
-.nav .search input{
+.nav .search input {
     flex-grow: 1;
 }
 
-/* need help with search bar */
+.im-magnifier {
+    font-size: 16px;
+}
 
 /* --------------------Main Banner----------------------- */
 
-.banner{
-    background: grey url(/final-project/images/main-banner.jpg) no-repeat center bottom;
+.banner {
+    background: grey url(/final-project/images/main-banner.jpg) no-repeat center;
     background-size: cover;
     height: 350px;
     padding-top: 3.25em;
 }
 
-.banner-content{
+.banner-content {
     background: rgba(0, 0, 0, 0.5);
     padding: 1em;
     padding-top: 2em;
 }
 
 h1,
-.banner p{
+.banner p {
     color: white;
 }
 
-.connect-btn{
+.connect-btn {
     display: inline-block;
     box-sizing: border-box;
     padding: 1.5em;
@@ -162,89 +255,85 @@ h1,
     color: inherit;
 }
 
-a .im-care-right{
+a .im-care-right {
     vertical-align: middle;
     font-size: 1rem;
     margin-left: 1rem;
     margin-bottom: 0.5rem;
 }
 
-
-/* how to get arrow to format properly? */
-
 /* ----------------------About------------------------------ */
 
-.about{
-    background:#ffe6ac;
+.about {
+    background: #ffe6ac;
 }
 
-.about-us{
+.about-us {
     padding: 1em;
 }
 
-.about img{
+.about img {
     width: 100%;
     margin-bottom: 2em;
 }
 
 /* -----------------------Our Services----------------------- */
 
-.cards{
+.cards {
     margin: 0 auto;
     margin: 1em;
 }
 
-.card{
-    background:#ffe6ac;
+.card {
+    background: #ffe6ac;
     margin: 1em 0;
 }
 
 
-.cards h2{
+.cards h2 {
     padding-top: 1em;
 }
 
-.cards h3{
+.cards h3 {
     padding-top: 1em;
-    padding-left: 0.5em;
 }
 
-.cards p{
-    padding-left: 1em;
+.info {
+    padding: 0 1em 0 1em;
 }
 
-.card img{
+.card img {
     width: 100%;
 }
 
-.card .btn{
+.card .btn {
     display: inline-block;
     box-sizing: border-box;
     padding: 1.5em;
     background: #222;
     text-decoration: none;
     color: white;
-    margin: 0em 0em 1em 1em;
+    margin-bottom: 1em;
 }
 
 /* ----------------------Our Vision------------------------- */
 
-.ourvision{
+.ourvision {
     background: cornflowerblue url(/final-project/images/vision.jpg) no-repeat center;
     background-size: cover;
     padding: 1em;
 }
 
-.vision{
+.vision {
     color: white;
 }
 
-.ourvision h3{
+.ourvision h3 {
     padding-top: 1em;
     font-weight: 700;
 }
 
-.ourvision a{
+.ourvision a {
     background: rgba(0, 0, 0, 0.5);
     padding: 1.5em;
     border: 1px solid grey;
@@ -256,26 +345,26 @@ a .im-care-right{
 
 /* -----------------------Our Team-------------------------- */
 
-.ourteam{
+.ourteam {
     margin: 1em;
 }
 
-.ourteam img{
+.ourteam img {
     width: 100%;
     display: block;
 }
 
-.team-info{
+.team-info {
     background: #ffe6ac;
     padding: 1em;
     margin-bottom: 1em;
 }
 
-.ourteam h2{
+.ourteam h2 {
     margin: 0em 0 0.5em 0;
 }
 
-.ourteam h4{
+.ourteam h4 {
     padding-top: 0.5rem;
     padding-bottom: 0.25rem;
     border-bottom: 2px solid #c78c06;
@@ -283,46 +372,42 @@ a .im-care-right{
 
 /* ----------------------Contact----------------------------- */
 
-.contact{
+.contact {
     position: relative;
     box-sizing: border-box;
     padding: 1em;
-    clear: left;
 }
 
 /* Styling the Contact Box and its Contents */
-.contact-box{
+.contact-box {
     padding: 1em 0;
 }
 
-.contactbox h3{
+.contact h3 {
     padding-top: 1rem;
 }
 
-.full-name{
-    box-sizing: inherit;
-    width: 100%;
+.full-name {
+    width: 98%;
     margin-bottom: 1em;
     margin-top: 0.25em;
 }
 
-.email{
-    box-sizing: inherit;
-    width: 100%;
+.email {
+    width: 98%;
     margin-bottom: 1em;
     margin-top: 0.25em;
 }
 
-.message{
-    box-sizing: inherit;
-    width: 100%;
+.message {
+    width: 98%;
     height: 5rem;
     margin-bottom: 1em;
     margin-top: 0.25em;
 }
 
 button[type=submit] {
-    border: 1px solid #222;
+    border: 1px solid #c78c06;
     background-color: #222;
     font-size: 1em;
     color: #c78c06;
@@ -331,47 +416,180 @@ button[type=submit] {
 
 /* --------------------------Contact Us---------------------- */
 /* Styling the Hours of Operation */
-caption{
+caption {
     font-size: 1.5rem;
     font-weight: 800;
     padding-bottom: 0.5em;
     text-align: left;
 }
 
-/* How to align hours of operation caption to the left? */
-
-table{
+table {
     border-collapse: collapse;
     width: 100%;
 }
 
 table th,
-td{
+td {
     border: 1px solid grey;
     padding: 1em;
     font-size: 0.8em;
 }
 
-thead tr{
+thead tr {
     background: #ffe6ac;
 }
 
 /* Styling the Location */
-.location h3{
+.location h3 {
     padding-bottom: 0.5em;
 }
 
-iframe{
+iframe {
     width: 100%;
     height: 300px;
 }
 
 /* -------------------------Footer-------------------------- */
 /* Styling the Footer */
-footer{
+footer {
     background: #222;
     padding: 0.5em 0 0.5em 0.75em;
     color: #c78c06;
 }
 
-/* ------------------------Media Screens-------------------- */
+/* ------------------------Media Queries-------------------- */
+
+@media screen and (min-width:760px) {
+    html {
+        font-size: 16px;
+    }
+
+    .nav img {
+        width: 50%;
+        display: inline-block;
+    }
+
+    .nav-list {
+        display: flex;
+        align-items: center;
+        margin: 0 5em;
+    }
+
+    .nav-list li {
+        flex: 1;
+    }
+
+    /* Styling the Banner */
+    .banner-content {
+        max-width: 75%;
+        margin: 0 auto;
+    }
+
+    /* Styling About Us */
+    .about-us {
+        display: flex;
+    }
+
+    .about-us img {
+        width: 50%;
+        padding-left: 4em;
+        margin: 0 auto;
+    }
+
+    .about-content {
+        padding: 1em 4em 0em 1em;
+    }
+
+    /* Styling Our Services */
+    .card {
+        margin-bottom: -0.25em;
+    }
+
+    .cards {
+        padding: 0 4em 0 4em;
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+        column-gap: 10px;
+    }
+
+    .cards h2 {
+        grid-column: 1 / span 6;
+    }
+
+    .cards .card:nth-child(2) {
+        grid-column: span 3;
+    }
+
+    .cards .card:nth-child(3) {
+        grid-column: span 3;
+    }
+
+    .cards .card:nth-child(4) {
+        grid-row-start: 3;
+        grid-column: span 2;
+    }
+
+    .cards .card:nth-child(5) {
+        grid-row-start: 3;
+        grid-column: span 2;
+    }
+
+    .cards .card:nth-child(6) {
+        grid-row-start: 3;
+        grid-column: span 2;
+    }
+
+    /* Styling the Cards Buttons */
+    .card .btn {
+        width: 100%;
+        text-align: center;
+    }
+
+    /* Styling Our Vision */
+    .ourvision {
+        margin-top: 2em;
+        margin-bottom: 2em;
+        padding: 0 5em 0 5.5em;
+    }
+
+    /* Styling Our Team */
+    .ourteam {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        padding: 4.5em;
+    }
+
+    .ourteam h2 {
+        grid-column: 1 / span 2;
+    }
+
+    .ourteam .bob {
+        grid-row: 3;
+        grid-column: 2;
+        margin-bottom: -1em;
+    }
+    .team-info{
+        margin-bottom: -1em;
+    }
+
+    /* Styling Contact Us */
+        .contact{
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-template-rows: 50px 1fr 150px;
+            grid-column-gap: 1em;
+            grid-row-gap: 1em;
+        }
+        .contact .contactbox{
+            grid-column: 1;
+            grid-row: 2;
+        }
+        .contact .location{
+            grid-column: 2;
+            grid-row: 2;
+        }
+        .contact table{
+            grid-column: 1 / span 2;
+            grid-row: 3;
+        }
+    }
